student info added

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,11 @@
             <ul class="nav navbar-nav">
                 <li><a href="contact.html">Contacts</a></li>
             </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="student_list.html">Students</a></li>
+            </ul>
         </div><!-- /.navbar-collapse -->
+
     </div><!-- /.container-fluid -->
 </nav>
 
@@ -76,10 +80,7 @@
 <h4 class="program">Program</h4>
 
 <p>Program content</p>
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="../static/js/bootstrap.min.js"></script>
 </body>
 </html>
