--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Contacts page</title>
+    <title>Student details</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -45,51 +46,67 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-<div class="container">
-    <div class="jumbotron">
-        <h4 class="title">Director</h4>
 
-        <p>Name: Иванов Петр Алексеевич</p>
+<h4>Тимонов Алексей</h4>
 
-        <p>Skype: petr_ivanov</p>
+<table class="table">
+    <tbody>
+    <tr>
+        <td>Surname</td>
+        <td>Тимонов</td>
+    </tr>
+    <tr>
+        <td>Name</td>
+        <td>Алексей</td>
+    </tr>
+    <tr>
+        <td>Patronymic</td>
+        <td>Alex</td>
+    </tr>
+    <tr>
+        <td>Rating</td>
+        <td>10</td>
+    </tr>
+    <tr>
+        <td>Average Grade</td>
+        <td>100.0</td>
+    </tr>
+    <tr>
+        <td>Package</td>
+        <td>standart</td>
+    </tr>
+    <tr>
+        <td>Birth Date</td>
+        <td>21/10/1990</td>
+    </tr>
+    <tr>
+        <td>Address</td>
+        <td>Харьков, Иванова 6</td>
+    </tr>
+    <tr>
+        <td>Post</td>
+        <td>61001</td>
+    </tr>
+    <tr>
+        <td>Skype</td>
+        <td>alex.timonov</td>
+    </tr>
+    </tbody>
 
-        <p class="email">Email: ivanov.petro@gmail.com</p>
-
-        <p>Phone: 057-1234-567</p>
-    </div>
-</div>
-<div class="container">
-    <div class="jumbotron">
-        <h4>Manager</h4>
-
-        <p>Name: Иванов Петр Алексеевич</p>
-
-        <p>Skype: petr_ivanov</p>
-
-        <p class="email">Email: ivanov.petro@gmail.com</p>
-
-        <p>Phone: 057-1234-567</p>
-    </div>
-</div>
-<div class="container">
-    <div class="jumbotron">
-        <h4>Founder</h4>
-
-        <p>Name: Иванов Петр Алексеевич</p>
-
-        <p>Skype: petr_ivanov</p>
-
-        <p class="email">Email: ivanov.petro@gmail.com</p>
-
-        <p>Phone: 057-1234-567</p>
-    </div>
-</div>
+</table>
 
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="../static/js/bootstrap.min.js"></script>
-<script>$('#example').tooltip(options)</script>
-</body>
-</html>
+<table class="table">
+    <tbody>
+    <tr>
+        <td>Tests</td>
+        <td>99%</td>
+    </tr>
+
+    <tr>
+        <td>Problem Task</td>
+        <td>100%</td>
+    </tr>
+
+    </tbody>
+</table>
