--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -91,6 +91,10 @@
         <td>Skype</td>
         <td>alex.timonov</td>
     </tr>
+    <tr>
+        <td>E-mail</td>
+        <td>alex.timonov@gmail.com</td>
+    </tr>
     </tbody>
 
 </table>
@@ -110,3 +114,34 @@
 
     </tbody>
 </table>
+<p class="muted">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+
+<p class="text-warning">Etiam porta sem malesuada magna mollis euismod.</p>
+
+<p class="text-error">Donec ullamcorper nulla non metus auctor fringilla.</p>
+
+<p class="text-info">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis.</p>
+
+<p class="text-success">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+<blockquote class="pull-right">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+    <small>Кто-то очень известный в <cite title="Source Title">Названии источника</cite></small>
+</blockquote>
+<form>
+    <label>Название</label>
+    <input type="text" placeholder="Type something…">
+    <span class="help-block">Это пример вспомогательного текста.</span>
+    <label class="checkbox">
+        <input type="checkbox"> Проверить
+    </label>
+    <button type="submit" class="btn">Подтвердить</button>
+</form>
+
+<form class="form-search">
+    <input type="text" class="input-medium search-query">
+    <button type="submit" class="btn">Search</button>
+</form>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="../static/js/bootstrap.min.js"></script>
+</body>
+</html>
