--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -30,6 +30,7 @@
 		</nav>
 		<div class ='container'>
 			<h2 class="course">Petrov Vladimir</h2>
+			<img src="../static/images/student.jpg">
 			<div>
 				<!-- Nav tabs -->
 				<ul class="nav nav-tabs" role="tablist">
@@ -49,85 +50,55 @@
 				</div>
 			</div>
 
-
-			<h2 text-align='center'>Bursa `s students</h2>
-			<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="headingOne">
-						<h4 class="panel-title">
-							<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Pybursa Group №1</a>
-						</h4>
-					</div>
-					<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-						<div class="panel-body">
-							<p>Первый выпуск студентов был весной 2014 года. Во время обучения 23 студента получили сертификаты об успешном окончании курса. 1 студент был отчислен за невыполнение домашних заданий</p>
-      					</div>
-    				</div>
-  				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="headingTwo">
-						<h4 class="panel-title">
-							<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Pybursa Group #2</a>
-						</h4>
-					</div>
-					<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-						<div class="panel-body">
-							<p>Второй выпуск студентов был весной 2015 года. Во время обучения 31 студента получили сертификаты об успешном окончании курса. 2 студент был отчислен за невыполнение домашних заданий</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
 			<div class="table-responsive">
 				<table class="table table-striped">
 					<thead>
 						<tr>
-							<th>No</th>
 							<th>Surname</th>
 							<th>Name</th>
+							<th>Patronymic</th>
+							<th>Birth Date</th>
 							<th>Address</th>
+							<th>E-mail</th>
 							<th>Skype</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<td><a href="student_detail.html">1</a></td>
 							<td>Petrov</td>
 							<td>Vladimir</td>
+							<td>Vladimirovich</td>
+							<td>26.10.1982</td>
 							<td>Kharkiv, Dovgenko 32-214</td>
+							<td>vladimir.petrov@gmail.com</td>
 							<td>vladimir.petrov</td>
-						</tr>
-						<tr>
-							<td>2</td>
-							<td>Petrova</td>
-							<td>Irina</td>
-							<td>Kharkiv, Gogol 40-24</td>
-							<td>irina.petrova</td>
-						</tr>
-						<tr>
-							<td>3</td>
-							<td>Ivanov</td>
-							<td>Ivan</td>
-							<td>Kyiv, Dovgenko 72-14</td>
-							<td>ivan.ivanov</td>
-						</tr>
-						<tr>
-							<td>4</td>
-							<td>Ivanova</td>
-							<td>Nastia</td>
-							<td>Dnepropetrocsk, Kurchenko 8-39</td>
-							<td>ivanova.nastia</td>
-						</tr>
-						<tr>
-							<td>5</td>
-							<td>Shevchenko</td>
-							<td>Arthur</td>
-							<td>Lviv, Mira 7-21</td>
-							<td>arthur.shevchenko</td>
 						</tr>
 					</tbody>
 				</table>
 			
+			<div class="table-responsive">
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th>Problem task</th>
+							<th>Tests</th>
+							<th>Problem task</th>
+							<th>Tests</th>
+							<th>Average Grade</th>
+							<th>Rating</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>97%</td>
+							<td>100%</td>
+							<td>98%</td>
+							<td>100%</td>
+							<td>98%</td>
+							<td>4</td>
+						</tr>
+					</tbody>
+				</table>
 			<p class='glyphicon-ok'>To get more ditails please connect with us</p>
 		</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
