student_detail changed

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -44,7 +44,7 @@
 						<p>Проживает в городе Харьков.</p> 
 					</div>
 					<div role="tabpanel" class="tab-pane" id="profile">
-						<p>Владимир Петров окончил курсы со средним баллом 9.7</p>
+						<p class="text-nowrap">Владимир Петров окончил курсы со средним баллом 9.7</p>
 						<p>Его работы за время обучения можно посмотреть на его страничке GitHub</p>
 					</div>
 				</div>
@@ -76,13 +76,17 @@
 					</tbody>
 				</table>
 			
+			<hr>
+
+			<h3 class="text-center">Успеваемость и рейтинг</h3>
+
 			<div class="table-responsive">
-				<table class="table table-striped">
+				<table class="table-condensed">
 					<thead>
 						<tr>
-							<th>Problem task</th>
+							<th>Problem Task</th>
 							<th>Tests</th>
-							<th>Problem task</th>
+							<th>Problem Task</th>
 							<th>Tests</th>
 							<th>Average Grade</th>
 							<th>Rating</th>
