student_detail changed2

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -29,7 +29,12 @@
 	  		</div>
 		</nav>
 		<div class ='container'>
-			<h2 class="course">Petrov Vladimir</h2>
+			<div class="page-header">
+				<h2 class="course">Petrov Vladimir</h2>
+				<div class="alert alert-success" role="alert">
+					<p>Студент курса Pybursa</p>
+				</div>
+			</div>
 			<img src="../static/images/student.jpg">
 			<div>
 				<!-- Nav tabs -->
