--- a/templates/contact.html
+++ b/templates/contact.html
@@ -45,14 +45,14 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-4">
-		<h2>Director:</h2>
+		<h2>Director</h2>
 			Name: Mr. Ben
 			Skype: mrben
 			Email: mrben@gmail.com
 		</div>
 		
 		<div class="col-lg-4">
-		<h2>Manager:</h2>				
+		<h2>Manager</h2>				
 			Name: Mr. Ron
 			Skype: mrron
 			Email: mrron@gmail.com
@@ -60,7 +60,7 @@
 		</div>
 		
 		<div class="col-lg-4">
-		<h2>Founder:</h2>			
+		<h2>Founder</h2>			
 			Name: Miss. Murple
 			Skype: missmurple
 			Email: missmurple@gmail.com
