--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,7 +39,8 @@
       <ul class="nav navbar-nav">
        
         <li><a href="index.html">Main</a></li>
-	   <li class="active"><a href="contact.html">Contacts</a></li>
+	    <!--<li class="active"><a href="contact.html">Contacts <span class="sr-only">(current)</span></a></li> -->
+	    <li class="active"><a href="contact.html">Contacts</a></li>
         
       </ul>
      
