--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,18 +44,16 @@ nav {
    margin-left: 50px;
 }
 
-.padd2{
-   margin-left: 50px;
+.skipe{
+   color: #FFF;
 }
-.padd3{
-   margin-left: 50px;
+
+.phone{
+   color:  #FFF;
 }
-.padd4{
-   margin-left: 50px;
+
+.name{
+   color:  #FFF;
 }
-.padd5{
-   margin-left: 50px;
-}
-.padd6{
-   margin-left: 50px;
-}
+
+
