--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li ><a href="index.html">Main</a></li>
-                    <li class="active"><a href="#">Contact<span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="#">Contacts<span class="sr-only">(current)</span></a></li>
                 </ul>
             </div>
         </div>
@@ -27,20 +27,16 @@
 
     <div class="jumbotron">
         <h1>Our Contacts</h1>
-        <p>
-        <p>Skype: Innad_sdg</p>
-        <p>Email: Marina@gmail.com </p>
-        <p>Phone: 12345689 </p>
-        <p>Address: Thomas Nolan Kaszas II
-            5322 Otter Lane
-            Middleberge FL 32068 </p>
+
+        <p class="skipe">Skype: Innad_sdg</p>
+        <p class="phone">Email: Marina@gmail.com </p>
+        <p class="phone">Phone: 12345689 </p>
+        <p>Address: Thomas Nolan Kaszas II 5322 Otter LaneMiddleberge FL 32068 </p>
 
         <br/>
         <br/>
         <br/>
         <br/>
-
-        </p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
         <div class="row">
             <div class="col-sm-6 col-md-4 ">
@@ -48,7 +44,7 @@
                     <img src="../static/images/1.png" alt="..."  class="avatar" >
                     <div class="caption antiopas padd">
                         <h3 class="antiopas">Founder</h3>
-                        <p>Name: Natasha</p>
+                        <p class="name"> Name: Natasha</p>
                         <p>Skype: Natasha_sdg </p>
                         <p>Email: Natasha@gmail.com </p>
                         <p>Phone: 12345689 </p>
@@ -61,7 +57,7 @@
                     <img src="../static/images/2.png" alt="..." class="avatar">
                     <div class="caption antiopas padd">
                         <h3 class="antiopas">Manager</h3>
-                        <p>Name: Marina</p>
+                        <p class="name">Name: Marina</p>
                         <p>Skype: Marina_sdg </p>
                         <p>Email: Marina@gmail.com </p>
                         <p>Phone: 12345689 </p>
@@ -74,7 +70,7 @@
                     <img src="../static/images/3.png" alt="..." class="avatar">
                     <div class="caption antiopas padd">
                         <h3 class="antiopas">Director</h3>
-                        <p>Name: Inna</p>
+                        <p class="name">Name: Inna</p>
                         <p>Skype: Innad_sdg </p>
                         <p>Email: Innad@gmail.com </p>
                         <p>Phone: 12345689 </p>
