--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Main<span class="sr-only">(current)</span></a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contacts</a></li>
           </ul>
         </div>
       </div>
@@ -28,6 +28,16 @@
     <div class="jumbotron">
         <h1>Hello, PyBursa!</h1>
         <h3>Description</h3>
+
+        <p>требования к контенту html-файлов должны быть соблюдены.
+            При клике на вкладку Main, видим описание, о чем курс (обязателен заголовок Description),
+            его программа (обязателен заголовок Program); указанные заголовки должны использоваться
+            только как описание курса; текст под заголовками, другие заголовки и элементы - полет
+            Вашей фантазии. Заказчик пожелал, чтобы в наименовании курса обязательно присутствовала
+            строка "Bursa"</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        <h3>Program</h3>
+
         <p>требования к контенту html-файлов должны быть соблюдены.
             При клике на вкладку Main, видим описание, о чем курс (обязателен заголовок Description),
             его программа (обязателен заголовок Program); указанные заголовки должны использоваться
