Modify html and css

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,6 +69,7 @@
         <div class="about">
           <h2>About the Course</h2>
           <p>The primary method for learning the course material will be to work through multiple "mini-projects" in Python. To make this class enjoyable, these projects will include building fun games such as Pong, Blackjack, and Asteroids. When you’ve finished our course, we can’t promise that you will be a professional programmer, but we think that you will learn a lot about programming in Python and have fun while you’re doing it. </p>
+          <h2>Program</h2>
           <p>The first part of the course will last five weeks.  The lectures from each week will focus on the topics listed in the syllabus while an associated weekly “mini- project” will serve to reinforce these concepts in practice.  Grades for these mini-projects will be determined via peer-assessment.  The class will also include two quizzes each week to provide further feedback.
           </p>
           
