--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,10 @@ body {
   text-align: left;
   font-size: 10px;
 }
+.contact {
+  text-align: center;
+  font-size: 30px;
+}  
 h1.description {
   font-size: 30px;
   font-weight: bold;
