--- a/templates/contact.html
+++ b/templates/contact.html
@@ -52,7 +52,9 @@
         </div>
       </div>
     </nav>
-
+    <div>
+    <h2 class="contact">Contacts</h2>
+    </div>
     <div class="container theme-showcase">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
