--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,6 +17,7 @@
     <ul class="nav nav-tabs">
       <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
       <li role="presentation"><a href="index.html">Main</a></li>
+      <li role="presentation"><a href="student_list.html">Students</a></li>
     </ul>
     <h3 class="dir">Director</h3>
     <div class="bs-example" id="director">
