modify menu in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
     <ul class="nav nav-tabs">
       <li role="presentation" class="active"><a href="index.html">Main</a></li>
       <li role="presentation"><a href="contact.html">Contacts</a></li>
+      <li role="presentation"><a href="student_list.html">Students</a></li>
     </ul>
     <h1>PyBursa</h1>
     <h2>Description:</h2>
