--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
     <title>Python Bursa</title>
     <!-- Bootstrap -->
     <link href="../static/css/style.css" rel="stylesheet">
-
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -17,7 +17,7 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <div class="btn-group">
@@ -27,7 +27,7 @@
             </ul>
            </div>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse nav-coll" id="bs-example-navbar-collapse-1">
         </div>
         </div>
       </nav>
@@ -38,10 +38,10 @@
       </div>
       <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img src="../static/images/boss.jpg" alt="...">
+        <img class="imgD" src="../static/images/boss.jpg" alt="...">
         <div class="caption">
-          <h3>Director</h3>
-          <p>Name: Алексей Радченко<br>
+          <h3 class="D">Director</h3>
+          <p class="D1">Name: Алексей Радченко<br>
              skype: <br>
              e-mail: <br>
              phone:
@@ -51,10 +51,10 @@
     </div>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img id='as' src="../static/images/manadg.jpg" alt="...">
+        <img class="imgM" src="../static/images/manadg.jpg" alt="...">
         <div class="caption">
-          <h3>Manager</h3>
-          <p>Name: Дария Михалевич<br>
+          <h3 class="M">Manager</h3>
+          <p class = "M1">Name: Дария Михалевич<br>
              skype: darka.darka.darka.darka.<br>
              e-mail: daria.mykhalevych@gmail.com<br>
              phone:</p>
@@ -63,10 +63,10 @@
     </div>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img  src="../static/images/founder.jpg" alt="...">
+        <img class="imgF" src="../static/images/founder.jpg" alt="...">
         <div class="caption">
-          <h3>Founder</h3>
-          <p>Name: Павел Обод<br>
+          <h3 class="F">Founder</h3>
+          <p class= "F1">Name: Павел Обод<br>
              skype: azaless<br>
              e-mail: itbursa100@gmail.com<br>
              phone:
@@ -76,5 +76,6 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.js"></script>
+    <a class = "linkc" href = "index.html">Click to Main menu<a>
   </body>
 </html>
