--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <title>PythonBursa</title>
     <!-- Bootstrap -->
     <link href="../static/css/style.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,7 +18,7 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <div class="btn-group">
@@ -48,29 +49,30 @@
         <h1>Program</h1>
         <ul class="list-group">
           <li class="list-group-item">Основы Python </li>
-          <li class="list-group-item">Строки и итераторы</li>
+          <li class="list-group-a">Строки и итераторы</li>
           <li class="list-group-item">Функции и модульность</li>
-          <li class="list-group-item">Библиотеки и пакетный менеджер</li>
+          <li class="list-group-b">Библиотеки и пакетный менеджер</li>
           <li class="list-group-item">Классы и ООП, основы</li>
-          <li class="list-group-item">Классы и ООП, возможности Python</li>
+          <li class="list-group-c">Классы и ООП, возможности Python</li>
           <li class="list-group-item">Работа с файлами</li>
-          <li class="list-group-item">Работа с датами</li>
+          <li class="list-group-d">Работа с датами</li>
           <li class="list-group-item">Основы html/css</li>
-          <li class="list-group-item">Основы JavaScript</li>
+          <li class="list-group-e">Основы JavaScript</li>
           <li class="list-group-item">Основы Web, HTTP</li>
-          <li class="list-group-item">Django first steps</li>
+          <li class="list-group-f">Django first steps</li>
           <li class="list-group-item">Структура Web приложения</li>
-          <li class="list-group-item">Работа с базами данных, ORM</li>
+          <li class="list-group-g">Работа с базами данных, ORM</li>
           <li class="list-group-item">Кастомизация админки</li>
-          <li class="list-group-item">Язык шаблонов</li>
+          <li class="list-group-h">Язык шаблонов</li>
           <li class="list-group-item">Forms</li>
-          <li class="list-group-item">Class-based (Generic) Views</li>
+          <li class="list-group-i">Class-based (Generic) Views</li>
           <li class="list-group-item">Реализация стандартных задач</li>
-          <li class="list-group-item">Средства отладки и тестирование</li>
+          <li class="list-group-j">Средства отладки и тестирование</li>
           <li class="list-group-item">Деплоймент</li>
         </ul>
       </div>
     </div>
+    <a class = "linki" href = "contact.html">Click to watch Contacts<a>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
