--- a/templates/contact.html
+++ b/templates/contact.html
@@ -76,6 +76,6 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.js"></script>
-    <a class = "linkc" href = "index.html">Click to Main menu<a>
+    <a class = "linkc" href = "index.html">Click to Main menu</a>
   </body>
 </html>
