--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
         </ul>
       </div>
     </div>
-    <a class = "linki" href = "contact.html">Click to watch Contacts<a>
+    <a class = "linki" href = "contact.html">Click to watch Contacts</a>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
