--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@
   background-color: #fff;
 }
 .list-group-a {
-  float: middle;
+  float: center;
 }
 .list-group-a {
   margin-right:5px;
@@ -15,7 +15,7 @@
   background-color: #fff;
 }
 .list-group-b {
-  float: middle;
+  float: center;
 }
 .list-group-b {
   margin-right:5px;
@@ -26,7 +26,7 @@
   background-color: #fff;
 }
 .list-group-c {
-  float: middle;
+  float: center;
 }
 .list-group-c {
   margin-right:5px;
@@ -37,7 +37,7 @@
   background-color: #fff;
 }
 .list-group-d {
-  float: middle;
+  float: center;
 }
 .list-group-d {
   margin-right:5px;
@@ -48,7 +48,7 @@
   background-color: #fff;
 }
 .list-group-e {
-  float: middle;
+  float: center;
 }
 .list-group-e {
   margin-right:5px;
@@ -59,7 +59,7 @@
   background-color: #fff;
 }
 .list-group-f {
-  float: middle;
+  float: center;
 }
 .list-group-f {
   margin-right:5px;
@@ -70,7 +70,7 @@
   background-color: #fff;
 }
 .list-group-g {
-  float: middle;
+  float: center;
 }
 .list-group-g {
   margin-right:5px;
@@ -81,7 +81,7 @@
   background-color: #fff;
 }
 .list-group-h {
-  float: middle;
+  float: center;
 }
 .list-group-h {
   margin-right:5px;
@@ -92,7 +92,7 @@
   background-color: #fff;
 }
 .list-group-i {
-  float: middle;
+  float: center;
 }
 .list-group-i {
   margin-right:5px;
@@ -103,7 +103,7 @@
   background-color: #fff;
 }
 .list-group-j {
-  float: middle;
+  float: center;
 }
 .list-group-j {
   margin-right:5px;
