--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <div class="btn-group">
