--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,13 +9,14 @@
     <meta name="author" content="">
     <link rel="icon" href="../static/images/Other-python.ico">
 
-    <title>Профессиональные Python &amp; Django курсы</title>
+    <title>PyBursa: Профессиональные Python &amp; Django курсы</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="../static/css/sticky-footer-navbar.css" rel="stylesheet">
+    <link href="../static/css/styles.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../static/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -27,7 +28,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-
   <body>
 
     <!-- Fixed navbar -->
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://getbootstrap.com/examples/sticky-footer-navbar/#">PyBursa</a>
+          <a class="navbar-brand" href="index.html"><img class="logo" src="../static/images/Other-python.ico"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -65,11 +65,46 @@
 
     <!-- Begin page content -->
     <div class="container">
-      <div class="page-header">
+      <!-- <div class="page-header">
         <h1>Профессиональные Python &amp; Django курсы</h1>
-      </div>
-      <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>body &gt; .container</code>.</p>
-      <p>Back to <a href="http://getbootstrap.com/examples/sticky-footer">the default sticky footer</a> minus the navbar.</p>
+      </div> -->
+      <!-- My code here -->
+
+<div class="container" id="cnt1">
+    <div class="row feature">
+        <div class="col-md-4">
+            <div>
+                <img src="../static/images/pasha.jpg" alt="Павел Обод" class="img-circle img-thumbnail">
+                <h2>Founder</h2>
+                <p><b>Name:</b> Павел Обод</p>
+                <p><b>Email:</b> itbursa100@gmail.com</p>
+                <p><b>Skype:</b> azaless</p>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div>
+                <img src="../static/images/alena.jpg" alt="Алена Чайка" class="img-circle img-thumbnail">
+                <h2>Director</h2>
+                <p><b>Name:</b> Алена Чайка</p>
+                <p><b>Email:</b> alena.itbursa@gmail.com</p>
+                <p><b>Skype:</b> alena.itbursa</p>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div>
+                <img src="../static/images/darka.jpg" alt="Дария Михалевич" class="img-circle img-thumbnail">
+                <h2>Manager</h2>
+                <p><b>Name:</b> Дария Михалевич</p>
+                <p><b>Email:</b> daria.mykhalevych@gmail.com</p>
+                <p><b>Skype:</b> darka.darka.darka.darka.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+    <!--  end of my code --> 
     </div>
 
     <footer class="footer">
