--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,14 @@
     <meta name="author" content="">
     <link rel="icon" href="../static/images/Other-python.ico">
 
-    <title>Профессиональные Python &amp; Django курсы</title>
+    <title>PyBursa: Профессиональные Python &amp; Django курсы</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="../static/css/sticky-footer-navbar.css" rel="stylesheet">
+    <link href="../static/css/styles.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../static/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -40,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://getbootstrap.com/examples/sticky-footer-navbar/#">PyBursa</a>
+          <a class="navbar-brand" href="index.html"><img class="logo" src="../static/images/Other-python.ico"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -69,7 +70,7 @@
         <h1>PyBursa course description</h1>
       </div>
       <p class="lead">Чем интересен наш курс?</p>
-      <p>Практический курс по изучению современного языка программирования Python и фреимворка Django. 
+      <p class="text-justify">Практический курс по изучению современного языка программирования Python и фреимворка Django. 
          Обучение будет проходить с уклоном в веб-разработку. Мы учим начинающих программистов до уровня Junior Python Developer 
          и после окончания курса все ученики могут претендовать на эту должность в любой интернет-компанию. 
          Весь курс построен на практике: преподаватели-практики, обучение на примере разработки реальных проектов, практические домашние задания. 
