--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../static/images/Other-python.ico">
 
-    <title>PyBursa: Профессиональные Python &amp; Django курсы</title>
+    <title>PyBursa: Main page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -67,11 +67,11 @@
     <!-- Begin page content -->
     <div class="container">
       <div class="page-header">
-        <h1>PyBursa course description</h1>
+        <h1>Description of PyBursa course</h1>
       </div>
       <p class="lead">Чем интересен наш курс?</p>
       <p class="text-justify">Практический курс по изучению современного языка программирования Python и фреимворка Django. 
-         Обучение будет проходить с уклоном в веб-разработку. Мы учим начинающих программистов до уровня Junior Python Developer 
+         Обучение будет проходить с уклоном в веб-разработку. Цель PyBursa научить начинающих программистов до уровня Junior Python Developer 
          и после окончания курса все ученики могут претендовать на эту должность в любой интернет-компанию. 
          Весь курс построен на практике: преподаватели-практики, обучение на примере разработки реальных проектов, практические домашние задания. 
          На курсе мы Вас познакомим с языком Python, фреимворком Django, научим работать с базами данных, покажем, как проводить UnitTest, 
@@ -79,7 +79,7 @@
          который высылается почтой владельцу. Для нас это уже третья группа, и многие из наших учеников успешно работают в сфере Python Development. 
          Курс совершенствуется из года в год и становится еще более эффективным.</p></br>
 
-      <p class="lead">Программа курса</p>
+      <p class="lead">Program of PyBursa course</p>
       <ol>
         <li>Основы Python</li>
           <ul>
