--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -36,10 +36,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
      width:90%;
      margin-top:10px;
      margin-bottom:20px;
+     margin-left: 30px;
+     margin-right: 30px;
  }
   
  .feature{
-     padding: 15px 0;
+     padding: 5px 0;
     text-align: center;
  }
  .feature > div > div{
@@ -55,3 +57,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     background: rgba(232, 215, 215, 0.10);
     transition: 0.3s;
  }
+
+.container{
+  width:90%
+}
