--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../static/images/Other-python.ico">
 
-    <title>PyBursa: Профессиональные Python &amp; Django курсы</title>
+    <title>PyBursa: Contact page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -78,6 +78,7 @@
                 <h2>Founder</h2>
                 <p><b>Name:</b> Павел Обод</p>
                 <p><b>Email:</b> itbursa100@gmail.com</p>
+                <p><b>Phone:</b> 0-800-555-44-00</p>
                 <p><b>Skype:</b> azaless</p>
             </div>
         </div>
@@ -88,6 +89,7 @@
                 <h2>Director</h2>
                 <p><b>Name:</b> Алена Чайка</p>
                 <p><b>Email:</b> alena.itbursa@gmail.com</p>
+                <p><b>Phone:</b> 0-800-555-23-25</p>
                 <p><b>Skype:</b> alena.itbursa</p>
             </div>
         </div>
@@ -98,6 +100,7 @@
                 <h2>Manager</h2>
                 <p><b>Name:</b> Дария Михалевич</p>
                 <p><b>Email:</b> daria.mykhalevych@gmail.com</p>
+                <p><b>Phone:</b> 0-800-555-11-12</p>
                 <p><b>Skype:</b> darka.darka.darka.darka.</p>
             </div>
         </div>
